Tablet version ready and part of Desktop

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light position-fixed w-100">
+    <nav class="navbar navbar-expand-lg navbar-light position-fixed w-100 d-lg-flex justify-content-lg-between">
       <a class="navbar-brand logo p-0 m-0" href="index.html">
         <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532941359/genadi/homePage/icons/logo.png">
       </a>
@@ -26,24 +26,24 @@
         <img class="hamburger" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532941359/genadi/homePage/icons/hamburger.png">
         <img class="cross" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532945389/genadi/homePage/icons/cross.png">
       </button>
-      <div class="dropdown collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto text-center">
-          <li class="nav-item">
+      <div class="dropdown collapse navbar-collapse d-lg-flex justify-content-between" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto mr-lg-0 p-lg-0 text-center d-lg-flex">
+          <li class="nav-item d-lg-flex align-items-lg-center mr-4">
             <a class="nav-link" href="index.html">Home</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item d-lg-flex align-items-lg-center mr-4">
             <a class="nav-link" href="about.html">About me</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item d-lg-flex align-items-lg-center mr-4">
             <a class="nav-link" href="skills.html">My skills</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item d-lg-flex align-items-lg-center mr-4">
             <a class="nav-link" href="projects.html">My work</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item d-lg-flex align-items-lg-center mr-4">
             <a class="nav-link" href="contact.html">Contact me</a>
           </li>
-          <div class="someIcons d-flex align-items-center justify-content-center mt-3">
+          <div class="someIcons d-flex align-items-center justify-content-center mt-3 mt-lg-0">
             <a href="https://www.behance.net/gdesignbg" class="m-2">
               <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/behance.png">
             </a>
@@ -66,16 +66,26 @@
             </p>
           </blockquote>
         </div>
-        <img class="py-1" src="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_500/v1533645904/genadi/aboutPage/genadi_photo.jpg">
-        <div class="aboutpage__text py-5">
-          <h3>Who is Genadi Georgiev?</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, rerum accusamus pariatur corporis quod similique
-            dignissimos magnam architecto, illum ea neque ratione veritatis recusandae vitae aut. Eos illo alias facere!</p>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste nemo odio sapiente numquam est rerum illo quam animi
-            cum incidunt? Doloremque similique ipsa dolores deserunt perspiciatis quos dolor officia dolorem?</p>
+        <div class="d-lg-flex">
+          <div>
+              <img srcset="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_500/v1533645904/genadi/aboutPage/genadi_photo.jpg 500w,
+              http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_1000/v1533645904/genadi/aboutPage/genadi_photo.jpg 992w,
+              http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_1500/v1533645904/genadi/aboutPage/genadi_photo.jpg 1500w"
+      sizes="(max-width: 500px) 500px,
+             (max-width: 992px) 992px,
+             1500px"
+      src="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_1500/v1533645904/genadi/aboutPage/genadi_photo.jpg">
+          </div>
+          <div class="aboutpage__text py-5 py-lg-0 d-lg-flex align-items-lg-center">
+            <div>              
+              <h3>Who is Genadi Georgiev?</h3>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste nemo odio sapiente numquam est rerum illo quam animi
+                cum incidunt? Doloremque similique ipsa dolores deserunt perspiciatis quos dolor officia dolorem?</p>
+            </div>
+          </div>
+          <!-- end of aboutpage__text -->
         </div>
-        <!-- end of aboutpage__text -->
-        <div class="aboutpage__text">
+        <div class="aboutpage__text mt-lg-5 ml-lg-5">
           <h3>My education.</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, rerum accusamus pariatur corporis quod similique
             dignissimos magnam architecto, illum ea neque ratione veritatis recusandae vitae aut. Eos illo alias facere!</p>
@@ -117,19 +127,25 @@
         <!-- end of projects-section-slick -->
       </div>
       <!-- end of aboutpage__section2 -->
-      <div class="aboutpage__section3 pb-5">
-        <div class="aboutpage__text">
+      <div class="aboutpage__section3 pb-5 pb-lg-0">
+        <div class="aboutpage__text ml-lg-5">
           <h3>What more..</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, rerum accusamus pariatur corporis quod similique
             dignissimos magnam architecto, illum ea neque ratione veritatis recusandae vitae aut. Eos illo alias facere!</p>
         </div>
-        <img class="my-3" src="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_500/v1533644670/genadi/aboutPage/workingPicture.jpg">
-        <div class="aboutpage__text mb-3 mt-3">
+        <img class="py-3" srcset="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_500/v1533644670/genadi/aboutPage/workingPicture.jpg 500w,
+        http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_992/v1533644670/genadi/aboutPage/workingPicture.jpg 992w,
+        http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_1500/v1533644670/genadi/aboutPage/workingPicture.jpg 1500w"
+      sizes="(max-width: 500px) 500px,
+             (max-width: 992px) 992px,
+             1500px"
+             src="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_1500/v1533644670/genadi/aboutPage/workingPicture.jpg 1500w">
+        <div class="aboutpage__text mb-3 mt-3 ml-lg-5">
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, rerum accusamus pariatur corporis quod similique
             dignissimos magnam architecto, illum ea neque ratione veritatis recusandae vitae aut. Eos illo alias facere!</p>
         </div>
         <a class="arrow-link" href="skills.html">View my skills &rarr;</a>
-        <blockquote class="aboutpage__blockquote mt-5 px-4 py-2">
+        <blockquote class="aboutpage__blockquote black mt-5 px-4 py-2">
           Now you can go to see
           <br>
           <a class="arrow-link" href="projects.html">My work &rarr;</a>
@@ -140,30 +156,36 @@
     </div>
     <!-- end of about -->
   </main>
-  <footer class="footer mt-2">
-    <div class="footer__logo row justify-content-center pt-4 pb-5">
-      <a class="logo" href="index.html">
-        <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532941359/genadi/homePage/icons/logo.png">
-      </a>
-    </div>
-    <div class="footer__text row justify-content-center text-center">
-      <p>If you like
-        <a href="projects.html">My work</a>, you can
-        <a href="contact.html">Contact me</a> and start working together.</p>
-    </div>
-    <div class="someIcons row justify-content-center align-items-center pt-4 pb-5">
-      <a href="https://www.behance.net/gdesignbg" class="m-2">
-        <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/behance.png">
-      </a>
-      <a href="https://www.instagram.com/gdesignbg/" class="m-2">
-        <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/instagram.png">
-      </a>
-    </div>
-    <div class="footer__copyright row justify-content-center text-center py-4 mx-3">
-      <p>Design by Genadi Georgiev
-        <br> Copyright 2018</p>
-    </div>
-  </footer>
+  <footer class="footer text-center">
+      <div class="footer__part1 d-lg-flex justify-content-lg-between py-lg-5">
+        <div class="footer__logo row justify-content-center pt-4 pt-lg-0 pb-5 pb-lg-0">
+          <a class="logo" href="index.html">
+            <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532941359/genadi/homePage/icons/logo.png">
+          </a>
+        </div>
+        <!-- end of footer__logo -->
+        <div class="footer__text text-center row justify-content-center ml-lg-5">
+          <p class="mb-lg-0">If you like
+            <a href="projects.html">My work</a>, you can
+            <a href="contact.html">Contact me</a> and start working together.</p>
+        </div>
+        <!-- end of footer__text -->
+        <div class="someIcons row justify-content-center align-items-center pt-4 pt-lg-0 pb-5 pb-lg-0">
+          <a href="https://www.behance.net/gdesignbg" class="m-2">
+            <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/behance.png">
+          </a>
+          <a href="https://www.instagram.com/gdesignbg/" class="m-2">
+            <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/instagram.png">
+          </a>
+        </div>
+        <!-- end of someIcons -->
+      </div>
+      <div class="footer__copyright row justify-content-center text-center py-4">
+        <p>Design by Genadi Georgiev
+          <br> Copyright 2018</p>
+      </div>
+      <!-- end of footer__copyright -->
+    </footer>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
