--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light position-fixed w-100">
+    <nav class="navbar navbar-expand-lg navbar-light position-fixed w-100 d-lg-flex justify-content-lg-between">
       <a class="navbar-brand logo p-0 m-0" href="index.html">
         <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532941359/genadi/homePage/icons/logo.png">
       </a>
@@ -26,24 +26,24 @@
         <img class="hamburger" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532941359/genadi/homePage/icons/hamburger.png">
         <img class="cross" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532945389/genadi/homePage/icons/cross.png">
       </button>
-      <div class="dropdown collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto text-center">
-          <li class="nav-item">
+      <div class="dropdown collapse navbar-collapse d-lg-flex justify-content-between" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto mr-lg-0 p-lg-0 text-center d-lg-flex">
+          <li class="nav-item d-lg-flex align-items-lg-center mr-4">
             <a class="nav-link" href="index.html">Home</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item d-lg-flex align-items-lg-center mr-4">
             <a class="nav-link" href="about.html">About me</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item d-lg-flex align-items-lg-center mr-4">
             <a class="nav-link" href="skills.html">My skills</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item d-lg-flex align-items-lg-center mr-4">
             <a class="nav-link" href="projects.html">My work</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item d-lg-flex align-items-lg-center mr-4">
             <a class="nav-link" href="contact.html">Contact me</a>
           </li>
-          <div class="someIcons d-flex align-items-center justify-content-center mt-3">
+          <div class="someIcons d-flex align-items-center justify-content-center mt-3 mt-lg-0">
             <a href="https://www.behance.net/gdesignbg" class="m-2">
               <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/behance.png">
             </a>
@@ -60,7 +60,7 @@
       <div class="home-section">
         <div class="section section1">
           <div class="home-section__text d-flex flex-column justify-content-between justify-content-sm-center">
-            <h1>Hello,
+            <h1>Hello, <br>
               <span class="smaller">I'm Genadi Georgiev</span>
             </h1>
             <p class="mb-0">I design
@@ -72,24 +72,24 @@
         <!-- end of section -->
       </div>
       <!-- end of home-section -->
-      <div class="projects-section">
-        <div class="projects-section--slick mb-3">
+      <div class="projects-section text-lg-center">
+        <div class="projects-section--slick mb-3 mb-lg-5">
           <div class="projects-section__item projects-section__item1 position-relative">
-            <div class="projects-section__item--text">
+            <div class="projects-section__item--text text-left">
               <h4>Mashmo Clothing</h4>
               <p>UX &amp; UI</p>
             </div>
           </div>
           <!-- end of projects-section__item -->
           <div class="projects-section__item projects-section__item2 position-relative">
-            <div class="projects-section__item--text">
+            <div class="projects-section__item--text text-left">
               <h4>Vasilena Yancheva</h4>
               <p>User Interface</p>
             </div>
           </div>
           <!-- end of projects-section__item -->
           <div class="projects-section__item projects-section__item3 position-relative">
-            <div class="projects-section__item--text">
+            <div class="projects-section__item--text text-left">
               <h4>Personal Portfolio</h4>
               <p>User Interface</p>
             </div>
@@ -104,45 +104,45 @@
         <div class="testimonials-section--slick">
           <div class="testimonials-section__item testimonials-section__item1">
             <div class="testimonials-section__heading d-flex flex-column align-items-center mb-2">
+              <img class="mb-3" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1534497830/genadi/nikolaydobrev.png">
+              <h4 class="mb-3">Nikolay Dobrev</h4>
+              <p>Owner of "Mashmo Clothing"</p>
+            </div>
+            <!-- end of testimonials-section__heading -->
+            <div class="testimonials-section__content text-center d-flex justify-content-center">
+              <p>As a start-up entrepreneur, I would definitely recommend Genadi's design skills if you need anything taken
+                care of. Using his services for building a website from scratch definitely helped my business to take off.
+                Fast, reliable and down to the detail!
+              </p>
+            </div>
+            <!-- end of testimonials-section__content -->
+          </div>
+          <!-- end of testimonials-section__item -->
+          <div class="testimonials-section__item testimonials-section__item1">
+            <div class="testimonials-section__heading d-flex flex-column align-items-center mb-2">
               <img class="mb-3" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533112795/genadi/homePage/vasilena_picture.png">
               <h4 class="mb-3">Vasilena Yancheva</h4>
-              <p>Creator of "Vasilena Yancheva Cosmetology &amp; Aestethics"</p>
+              <p> Owner of "Vasilena Yancheva Cosmetology &amp; Aestethics"</p>
             </div>
             <!-- end of testimonials-section__heading -->
-            <div class="testimonials-section__content">
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia impedit neque explicabo reiciendis deleniti
-                nam officiis voluptates, dolorem necessitatibus quibusdam nulla quasi quaerat magnam nihil magni nesciunt
-                perspiciatis facilis quisquam!</p>
+            <div class="testimonials-section__content text-center d-flex justify-content-center">
+              <p>I am very pleased with the work that Genadi has done for me. Thanks to the website, my small company has began
+                to grow. Genadi has helped me a lot and I strongly recommend him. He really strives to do everything as efficient
+                as possible and beautiful.</p>
             </div>
             <!-- end of testimonials-section__content -->
           </div>
           <!-- end of testimonials-section__item -->
           <div class="testimonials-section__item testimonials-section__item1">
             <div class="testimonials-section__heading d-flex flex-column align-items-center mb-2">
-              <img class="w-50 mb-3" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533112795/genadi/homePage/vasilena_picture.png">
-              <h4 class="mb-3">Vasilena Yancheva</h4>
-              <p>Creator of "Vasilena Yancheva Cosmetology &amp; Aestethics"</p>
+              <img class="mb-3" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1534497872/genadi/georgidimirov.png">
+              <h4 class="mb-3">Georgi Dimitrov</h4>
+              <p>Front-end Developer</p>
             </div>
             <!-- end of testimonials-section__heading -->
-            <div class="testimonials-section__content">
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia impedit neque explicabo reiciendis deleniti
-                nam officiis voluptates, dolorem necessitatibus quibusdam nulla quasi quaerat magnam nihil magni nesciunt
-                perspiciatis facilis quisquam!</p>
-            </div>
-            <!-- end of testimonials-section__content -->
-          </div>
-          <!-- end of testimonials-section__item -->
-          <div class="testimonials-section__item testimonials-section__item1">
-            <div class="testimonials-section__heading d-flex flex-column align-items-center mb-2">
-              <img class="w-50 mb-3" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533112795/genadi/homePage/vasilena_picture.png">
-              <h4 class="mb-3">Vasilena Yancheva</h4>
-              <p>Creator of "Vasilena Yancheva Cosmetology &amp; Aestethics"</p>
-            </div>
-            <!-- end of testimonials-section__heading -->
-            <div class="testimonials-section__content">
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia impedit neque explicabo reiciendis deleniti
-                nam officiis voluptates, dolorem necessitatibus quibusdam nulla quasi quaerat magnam nihil magni nesciunt
-                perspiciatis facilis quisquam!</p>
+            <div class="testimonials-section__content text-center d-flex justify-content-center">
+              <p>When creating my portfolio, I was looking for someone to help me with the design. With the help of Genadi,
+                I improved a lot my first design. I can definitely recommend him and his design skills. </p>
             </div>
             <!-- end of testimonials-section__content -->
           </div>
@@ -151,8 +151,8 @@
         <!-- end of testimonialsSection-slick -->
       </div>
       <!-- end of testimonialsSection -->
-      <div class="contact-section text-center">
-        <form class="contact-section__form" method="POST" action="https://formspree.io/genadidesign@gmail.com">
+      <div class="contact-section text-center d-lg-flex justify-content-lg-center">
+        <form class="contact-section__form w-lg-50" method="POST" action="https://formspree.io/genadidesign@gmail.com">
           <h2>Write to me</h2>
           <input type="hidden" name="_subject" value="E-mail from portfolio" />
           <input type="hidden" name="_next" value="https://gdimitrovd.com/portfolio/filledForm.html" />
@@ -169,33 +169,35 @@
     </div>
     <!-- end of homepage -->
   </main>
-  <footer class="footer">
-    <div class="footer__logo row justify-content-center pt-4 pb-5">
-      <a class="logo" href="index.html">
-        <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532941359/genadi/homePage/icons/logo.png">
-      </a>
+  <footer class="footer text-center">
+    <div class="footer__part1 d-lg-flex justify-content-lg-between py-lg-5">
+      <div class="footer__logo row justify-content-center pt-4 pt-lg-0 pb-5 pb-lg-0">
+        <a class="logo" href="index.html">
+          <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532941359/genadi/homePage/icons/logo.png">
+        </a>
+      </div>
+      <!-- end of footer__logo -->
+      <div class="footer__text text-center row justify-content-center ml-lg-5">
+        <p class="mb-lg-0">If you like
+          <a href="projects.html">My work</a>, you can
+          <a href="contact.html">Contact me</a> and start working together.</p>
+      </div>
+      <!-- end of footer__text -->
+      <div class="someIcons row justify-content-center align-items-center pt-4 pt-lg-0 pb-5 pb-lg-0">
+        <a href="https://www.behance.net/gdesignbg" class="m-2">
+          <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/behance.png">
+        </a>
+        <a href="https://www.instagram.com/gdesignbg/" class="m-2">
+          <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/instagram.png">
+        </a>
+      </div>
+      <!-- end of someIcons -->
     </div>
-    <!-- end of footer__logo -->
-    <div class="footer__text row justify-content-center text-center">
-      <p>If you like
-        <a href="projects.html">My work</a>, you can
-        <a href="contact.html">Contact me</a> and start working together.</p>
-    </div>
-        <!-- end of footer__text -->
-    <div class="someIcons row justify-content-center align-items-center pt-4 pb-5">
-      <a href="https://www.behance.net/gdesignbg" class="m-2">
-        <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/behance.png">
-      </a>
-      <a href="https://www.instagram.com/gdesignbg/" class="m-2">
-        <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/instagram.png">
-      </a>
-    </div>
-        <!-- end of someIcons -->
-    <div class="footer__copyright row justify-content-center text-center py-4 mx-3">
+    <div class="footer__copyright row justify-content-center text-center py-4">
       <p>Design by Genadi Georgiev
         <br> Copyright 2018</p>
     </div>
-        <!-- end of footer__copyright -->
+    <!-- end of footer__copyright -->
   </footer>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
