--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light position-fixed w-100">
+    <nav class="navbar navbar-expand-lg navbar-light position-fixed w-100 d-lg-flex justify-content-lg-between">
       <a class="navbar-brand logo p-0 m-0" href="index.html">
         <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532941359/genadi/homePage/icons/logo.png">
       </a>
@@ -26,24 +26,24 @@
         <img class="hamburger" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532941359/genadi/homePage/icons/hamburger.png">
         <img class="cross" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532945389/genadi/homePage/icons/cross.png">
       </button>
-      <div class="dropdown collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto text-center">
-          <li class="nav-item">
+      <div class="dropdown collapse navbar-collapse d-lg-flex justify-content-between" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto mr-lg-0 p-lg-0 text-center d-lg-flex">
+          <li class="nav-item d-lg-flex align-items-lg-center mr-4">
             <a class="nav-link" href="index.html">Home</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item d-lg-flex align-items-lg-center mr-4">
             <a class="nav-link" href="about.html">About me</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item d-lg-flex align-items-lg-center mr-4">
             <a class="nav-link" href="skills.html">My skills</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item d-lg-flex align-items-lg-center mr-4">
             <a class="nav-link" href="projects.html">My work</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item d-lg-flex align-items-lg-center mr-4">
             <a class="nav-link" href="contact.html">Contact me</a>
           </li>
-          <div class="someIcons d-flex align-items-center justify-content-center mt-3">
+          <div class="someIcons d-flex align-items-center justify-content-center mt-3 mt-lg-0">
             <a href="https://www.behance.net/gdesignbg" class="m-2">
               <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/behance.png">
             </a>
@@ -65,7 +65,7 @@
             <p class="m-0">UX &amp; UI</p>
           </div>
         </div>
-        <div class="projects__item projects__item2">
+        <div class="projects__item projects__item2 ml-lg-5 mt-lg-5">
           <div class="projects__item--text mb-3 ml-3">
             <h4 class="mb-1">Vasilena Yancheva</h4>
             <p class="m-0">User Interface</p>
@@ -77,7 +77,7 @@
             <p class="m-0">User Interface</p>
           </div>
         </div>
-        <div class="projects__item projects__item4">
+        <div class="projects__item projects__item4 ml-lg-5 mt-lg-5">
           <div class="projects__item--text mb-3 ml-3">
             <h4 class="mb-1">Magazine</h4>
             <p class="m-0">Print Design</p>
@@ -89,7 +89,7 @@
             <p class="m-0">Graphic Design</p>
           </div>
         </div>
-        <div class="projects__item projects__item6">
+        <div class="projects__item projects__item6 ml-lg-5 mt-lg-5">
           <div class="projects__item--text mb-3 ml-3">
             <h4 class="mb-1">3D Design</h4>
             <p class="m-0">Visualization &amp; Modeling</p>
@@ -100,30 +100,36 @@
     </div>
     <!-- end of projectspage -->
   </main>
-  <footer class="footer mt-2">
-    <div class="footer__logo row justify-content-center pt-4 pb-5">
-      <a class="logo" href="index.html">
-        <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532941359/genadi/homePage/icons/logo.png">
-      </a>
-    </div>
-    <div class="footer__text row justify-content-center text-center">
-      <p>If you like
-        <a href="projects.html">My work</a>, you can
-        <a href="contact.html">Contact me</a> and start working together.</p>
-    </div>
-    <div class="someIcons row justify-content-center align-items-center pt-4 pb-5">
-      <a href="https://www.behance.net/gdesignbg" class="m-2">
-        <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/behance.png">
-      </a>
-      <a href="https://www.instagram.com/gdesignbg/" class="m-2">
-        <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/instagram.png">
-      </a>
-    </div>
-    <div class="footer__copyright row justify-content-center text-center py-4 mx-3">
-      <p>Design by Genadi Georgiev
-        <br> Copyright 2018</p>
-    </div>
-  </footer>
+  <footer class="footer text-center">
+      <div class="footer__part1 d-lg-flex justify-content-lg-between py-lg-5">
+        <div class="footer__logo row justify-content-center pt-4 pt-lg-0 pb-5 pb-lg-0">
+          <a class="logo" href="index.html">
+            <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532941359/genadi/homePage/icons/logo.png">
+          </a>
+        </div>
+        <!-- end of footer__logo -->
+        <div class="footer__text text-center row justify-content-center ml-lg-5">
+          <p class="mb-lg-0">If you like
+            <a href="projects.html">My work</a>, you can
+            <a href="contact.html">Contact me</a> and start working together.</p>
+        </div>
+        <!-- end of footer__text -->
+        <div class="someIcons row justify-content-center align-items-center pt-4 pt-lg-0 pb-5 pb-lg-0">
+          <a href="https://www.behance.net/gdesignbg" class="m-2">
+            <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/behance.png">
+          </a>
+          <a href="https://www.instagram.com/gdesignbg/" class="m-2">
+            <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/instagram.png">
+          </a>
+        </div>
+        <!-- end of someIcons -->
+      </div>
+      <div class="footer__copyright row justify-content-center text-center py-4">
+        <p>Design by Genadi Georgiev
+          <br> Copyright 2018</p>
+      </div>
+      <!-- end of footer__copyright -->
+    </footer>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
