--- a/skills.html
+++ b/skills.html
@@ -17,7 +17,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light position-fixed w-100">
+    <nav class="navbar navbar-expand-lg navbar-light position-fixed w-100 d-lg-flex justify-content-lg-between">
       <a class="navbar-brand logo p-0 m-0" href="index.html">
         <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532941359/genadi/homePage/icons/logo.png">
       </a>
@@ -26,24 +26,24 @@
         <img class="hamburger" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532941359/genadi/homePage/icons/hamburger.png">
         <img class="cross" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532945389/genadi/homePage/icons/cross.png">
       </button>
-      <div class="dropdown collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto text-center">
-          <li class="nav-item">
+      <div class="dropdown collapse navbar-collapse d-lg-flex justify-content-between" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto mr-lg-0 p-lg-0 text-center d-lg-flex">
+          <li class="nav-item d-lg-flex align-items-lg-center mr-4">
             <a class="nav-link" href="index.html">Home</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item d-lg-flex align-items-lg-center mr-4">
             <a class="nav-link" href="about.html">About me</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item d-lg-flex align-items-lg-center mr-4">
             <a class="nav-link" href="skills.html">My skills</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item d-lg-flex align-items-lg-center mr-4">
             <a class="nav-link" href="projects.html">My work</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item d-lg-flex align-items-lg-center mr-4">
             <a class="nav-link" href="contact.html">Contact me</a>
           </li>
-          <div class="someIcons d-flex align-items-center justify-content-center mt-3">
+          <div class="someIcons d-flex align-items-center justify-content-center mt-3 mt-lg-0">
             <a href="https://www.behance.net/gdesignbg" class="m-2">
               <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/behance.png">
             </a>
@@ -58,48 +58,44 @@
   <main>
     <div id="skillspage">
       <h2 class="">My skills.</h2>
-      <div class="skillspage__section secton1 mt-5 py-4">
-        <div class="skillspage-section__heading">
-          <h3>User interface</h3>
+      <div class="d-lg-flex justify-content-lg-between">
+        <div class="skillspage__section secton1 mt-5 mt-lg-0 py-4 py-lg-5">
+          <div class="skillspage-section__heading">
+            <h3>User interface</h3>
+          </div>
+          <!-- end of skillspage-section__heading -->
+          <div class="skillspage-section__content">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, rerum accusamus pariatur corporis quod similique
+              dignissimos magnam architecto, illum ea neque ratione veritatis recusandae vitae aut. Eos illo alias facere!</p>
+          </div>
+          <!-- end of skillspage-section__content -->
         </div>
-        <!-- end of skillspage-section__heading -->
-        <div class="skillspage-section__content">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, rerum accusamus pariatur corporis quod similique
-            dignissimos magnam architecto, illum ea neque ratione veritatis recusandae vitae aut. Eos illo alias facere!</p>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste nemo odio sapiente numquam est rerum illo quam animi
-            cum incidunt? Doloremque similique ipsa dolores deserunt perspiciatis quos dolor officia dolorem?</p>
+        <!-- end of skillspage__section -->
+        <div class="skillspage__section section2 py-5">
+          <div class="skillspage-section__heading">
+            <h3>User Experience</h3>
+          </div>
+          <!-- end of skillspage-section__heading -->
+          <div class="skillspage-section__content">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, rerum accusamus pariatur corporis quod similique
+              dignissimos magnam architecto, illum ea neque ratione veritatis recusandae vitae aut. Eos illo alias facere!</p>
+          </div>
+          <!-- end of skillspage-section__content -->
         </div>
-        <!-- end of skillspage-section__content -->
+        <!-- end of skillspage__section -->
+        <div class="skillspage__section section3 py-5">
+          <div class="skillspage-section__heading">
+            <h3>What about Logo Design?</h3>
+          </div>
+          <!-- end of skillspage-section__heading -->
+          <div class="skillspage-section__content">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, rerum accusamus pariatur corporis quod similique
+              dignissimos magnam architecto, illum ea neque ratione veritatis recusandae vitae aut. Eos illo alias facere!</p>
+            </div>
+          <!-- end of skillspage-section__content -->
+        </div>
+        <!-- end of skillspage__section -->
       </div>
-      <!-- end of skillspage__section -->
-      <div class="skillspage__section section2 py-5">
-        <div class="skillspage-section__heading">
-          <h3>User Experience</h3>
-        </div>
-        <!-- end of skillspage-section__heading -->
-        <div class="skillspage-section__content">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, rerum accusamus pariatur corporis quod similique
-            dignissimos magnam architecto, illum ea neque ratione veritatis recusandae vitae aut. Eos illo alias facere!</p>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste nemo odio sapiente numquam est rerum illo quam animi
-            cum incidunt? Doloremque similique ipsa dolores deserunt perspiciatis quos dolor officia dolorem?</p>
-        </div>
-        <!-- end of skillspage-section__content -->
-      </div>
-      <!-- end of skillspage__section -->
-      <div class="skillspage__section section3 py-5">
-        <div class="skillspage-section__heading">
-          <h3>What about Logo Design?</h3>
-        </div>
-        <!-- end of skillspage-section__heading -->
-        <div class="skillspage-section__content">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, rerum accusamus pariatur corporis quod similique
-            dignissimos magnam architecto, illum ea neque ratione veritatis recusandae vitae aut. Eos illo alias facere!</p>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste nemo odio sapiente numquam est rerum illo quam animi
-            cum incidunt? Doloremque similique ipsa dolores deserunt perspiciatis quos dolor officia dolorem?</p>
-        </div>
-        <!-- end of skillspage-section__content -->
-      </div>
-      <!-- end of skillspage__section -->
       <div class="skillspage__icons text-center p-5">
         <div class="skillspage__icons1">
           <h3>Tools I use</h3>
@@ -133,7 +129,7 @@
         <!-- end of skillspage__icons3 -->
       </div>
       <!-- end of skillspage__icons -->
-      <div class="skillspage__gallery py-5 d-sm-flex flex-wrap">
+      <div class="skillspage__gallery py-5 pb-lg-0 d-sm-flex flex-wrap">
         <div class="skillspage__gallery--modal">
           <img class="skillspage__gallery--modal-cross mr-4 mb-4" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533807477/genadi/homePage/icons/crossWhite.png">
           <img id="skillspage__gallery--modal-content" class="px-4">
@@ -154,30 +150,36 @@
     </div>
     <!-- end of skillspage -->
   </main>
-  <footer class="footer mt-2">
-    <div class="footer__logo row justify-content-center pt-4 pb-5">
-      <a class="logo" href="index.html">
-        <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532941359/genadi/homePage/icons/logo.png">
-      </a>
-    </div>
-    <div class="footer__text row justify-content-center text-center">
-      <p>If you like
-        <a href="projects.html">My work</a>, you can
-        <a href="contact.html">Contact me</a> and start working together.</p>
-    </div>
-    <div class="someIcons row justify-content-center align-items-center pt-4 pb-5">
-      <a href="https://www.behance.net/gdesignbg" class="m-2">
-        <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/behance.png">
-      </a>
-      <a href="https://www.instagram.com/gdesignbg/" class="m-2">
-        <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/instagram.png">
-      </a>
-    </div>
-    <div class="footer__copyright row justify-content-center text-center py-4 mx-3">
-      <p>Design by Genadi Georgiev
-        <br> Copyright 2018</p>
-    </div>
-  </footer>
+  <footer class="footer text-center">
+      <div class="footer__part1 d-lg-flex justify-content-lg-between py-lg-5">
+        <div class="footer__logo row justify-content-center pt-4 pt-lg-0 pb-5 pb-lg-0">
+          <a class="logo" href="index.html">
+            <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532941359/genadi/homePage/icons/logo.png">
+          </a>
+        </div>
+        <!-- end of footer__logo -->
+        <div class="footer__text text-center row justify-content-center ml-lg-5">
+          <p class="mb-lg-0">If you like
+            <a href="projects.html">My work</a>, you can
+            <a href="contact.html">Contact me</a> and start working together.</p>
+        </div>
+        <!-- end of footer__text -->
+        <div class="someIcons row justify-content-center align-items-center pt-4 pt-lg-0 pb-5 pb-lg-0">
+          <a href="https://www.behance.net/gdesignbg" class="m-2">
+            <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/behance.png">
+          </a>
+          <a href="https://www.instagram.com/gdesignbg/" class="m-2">
+            <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/instagram.png">
+          </a>
+        </div>
+        <!-- end of someIcons -->
+      </div>
+      <div class="footer__copyright row justify-content-center text-center py-4">
+        <p>Design by Genadi Georgiev
+          <br> Copyright 2018</p>
+      </div>
+      <!-- end of footer__copyright -->
+    </footer>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
