Added proper links to projects and certificates.

--- a/projects.html
+++ b/projects.html
@@ -59,42 +59,42 @@
     <div id="projectspage">
       <h2>Selected work.</h2>
       <div class="projects__container d-sm-flex flex-wrap my-5">
-        <div class="projects__item projects__item1">
+        <a target="_blank" href="https://mashmoclothing.netlify.com/" class="projects__item projects__item1">
           <div class="projects__item--text mb-3 ml-3">
             <h4 class="mb-1">Mashmo Clothing eCommerce</h4>
             <p class="m-0">UX &amp; UI</p>
           </div>
-        </div>
-        <div class="projects__item projects__item2 ml-lg-5 mt-lg-5">
+        </a>
+        <a target="_blank" href="https://kozmetikvasilena.com/" class="projects__item projects__item2 ml-lg-5 mt-lg-5">
           <div class="projects__item--text mb-3 ml-3">
             <h4 class="mb-1">Vasilena Yancheva</h4>
             <p class="m-0">User Interface</p>
           </div>
-        </div>
-        <div class="projects__item projects__item3">
+        </a>
+        <a target="_blank" href="index.html" class="projects__item projects__item3">
           <div class="projects__item--text mb-3 ml-3">
             <h4 class="mb-1">Personal Portfolio</h4>
             <p class="m-0">User Interface</p>
           </div>
-        </div>
-        <div class="projects__item projects__item4 ml-lg-5 mt-lg-5">
+        </a>
+        <a target="_blank" href="https://www.behance.net/gallery/61855137/Racing-Magazine-Print-Design" class="projects__item projects__item4 ml-lg-5 mt-lg-5">
           <div class="projects__item--text mb-3 ml-3">
             <h4 class="mb-1">Magazine</h4>
             <p class="m-0">Print Design</p>
           </div>
-        </div>
-        <div class="projects__item projects__item5">
+        </a>
+        <a target="_blank" href="https://www.behance.net/gallery/61267187/Logo-Design-for-Kennel-Imperial-Dogs-Plovdiv" class="projects__item projects__item5">
           <div class="projects__item--text mb-3 ml-3">
             <h4 class="mb-1">Logo Design</h4>
             <p class="m-0">Graphic Design</p>
           </div>
-        </div>
-        <div class="projects__item projects__item6 ml-lg-5 mt-lg-5">
+        </a>
+        <a target="_blank" href="https://www.behance.net/gallery/67258459/Visualization-with-3DS-Max" class="projects__item projects__item6 ml-lg-5 mt-lg-5">
           <div class="projects__item--text mb-3 ml-3">
             <h4 class="mb-1">3D Design</h4>
             <p class="m-0">Visualization &amp; Modeling</p>
           </div>
-        </div>
+        </a>
       </div>
       <!-- end of projects__container -->
     </div>
