Fixing mixed content

--- a/about.html
+++ b/about.html
@@ -68,19 +68,18 @@
         </div>
         <div class="d-lg-flex">
           <div>
-              <img srcset="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_500/v1533645904/genadi/aboutPage/genadi_photo.jpg 500w,
-              http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_1000/v1533645904/genadi/aboutPage/genadi_photo.jpg 992w,
-              http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_1500/v1533645904/genadi/aboutPage/genadi_photo.jpg 1500w"
-      sizes="(max-width: 500px) 500px,
-             (max-width: 992px) 992px,
-             1500px"
-      src="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_1500/v1533645904/genadi/aboutPage/genadi_photo.jpg">
+            <img srcset="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_500/v1533645904/genadi/aboutPage/genadi_photo.jpg 500w,
+          https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_1000/v1533645904/genadi/aboutPage/genadi_photo.jpg 992w,
+          https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_1500/v1533645904/genadi/aboutPage/genadi_photo.jpg 1500w"
+              sizes="(max-width: 500px) 500px,
+          (max-width: 992px) 992px,
+          1500px" src="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_1500/v1533645904/genadi/aboutPage/genadi_photo.jpg">
           </div>
           <div class="aboutpage__text py-5 py-lg-0 d-lg-flex align-items-lg-center">
-            <div>              
+            <div>
               <h3>Who is Genadi Georgiev?</h3>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste nemo odio sapiente numquam est rerum illo quam animi
-                cum incidunt? Doloremque similique ipsa dolores deserunt perspiciatis quos dolor officia dolorem?</p>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste nemo odio sapiente numquam est rerum illo quam
+                animi cum incidunt? Doloremque similique ipsa dolores deserunt perspiciatis quos dolor officia dolorem?</p>
             </div>
           </div>
           <!-- end of aboutpage__text -->
@@ -96,7 +95,7 @@
       <div class="aboutpage__section2 my-5">
         <div class="aboutpage__section2--slick">
           <a target="_blank" href="https://creative.softuni.bg/certificates/details/1795/99561eee" class="aboutpage__certificate">
-            <img src="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_576/v1533643629/genadi/aboutPage/certificates/uxDesign.png">
+            <img src="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_576/v1533643629/genadi/aboutPage/certificates/uxDesign.png">
           </a>
           <!-- end of aboutpage__certificate -->
           <a target="_blank" href="https://creative.softuni.bg/certificates/details/2013/c8351d13" class="aboutpage__certificate">
@@ -133,13 +132,12 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, rerum accusamus pariatur corporis quod similique
             dignissimos magnam architecto, illum ea neque ratione veritatis recusandae vitae aut. Eos illo alias facere!</p>
         </div>
-        <img class="py-3" srcset="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_500/v1533644670/genadi/aboutPage/workingPicture.jpg 500w,
-        http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_992/v1533644670/genadi/aboutPage/workingPicture.jpg 992w,
-        http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_1500/v1533644670/genadi/aboutPage/workingPicture.jpg 1500w"
-      sizes="(max-width: 500px) 500px,
-             (max-width: 992px) 992px,
-             1500px"
-             src="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_1500/v1533644670/genadi/aboutPage/workingPicture.jpg 1500w">
+        <img class="py-3" srcset="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_500/v1533644670/genadi/aboutPage/workingPicture.jpg 500w,
+            https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_992/v1533644670/genadi/aboutPage/workingPicture.jpg 992w,
+            https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_1500/v1533644670/genadi/aboutPage/workingPicture.jpg 1500w"
+          sizes="(max-width: 500px) 500px,
+            (max-width: 992px) 992px,
+            1500px" src="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_1500/v1533644670/genadi/aboutPage/workingPicture.jpg 1500w">
         <div class="aboutpage__text mb-3 mt-3 ml-lg-5">
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, rerum accusamus pariatur corporis quod similique
             dignissimos magnam architecto, illum ea neque ratione veritatis recusandae vitae aut. Eos illo alias facere!</p>
@@ -157,35 +155,35 @@
     <!-- end of about -->
   </main>
   <footer class="footer text-center">
-      <div class="footer__part1 d-lg-flex justify-content-lg-between py-lg-5">
-        <div class="footer__logo row justify-content-center pt-4 pt-lg-0 pb-5 pb-lg-0">
-          <a class="logo" href="index.html">
-            <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532941359/genadi/homePage/icons/logo.png">
-          </a>
-        </div>
-        <!-- end of footer__logo -->
-        <div class="footer__text text-center row justify-content-center ml-lg-5">
-          <p class="mb-lg-0">If you like
-            <a href="projects.html">My work</a>, you can
-            <a href="contact.html">Contact me</a> and start working together.</p>
-        </div>
-        <!-- end of footer__text -->
-        <div class="someIcons row justify-content-center align-items-center pt-4 pt-lg-0 pb-5 pb-lg-0">
-          <a href="https://www.behance.net/gdesignbg" class="m-2">
-            <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/behance.png">
-          </a>
-          <a href="https://www.instagram.com/gdesignbg/" class="m-2">
-            <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/instagram.png">
-          </a>
-        </div>
-        <!-- end of someIcons -->
+    <div class="footer__part1 d-lg-flex justify-content-lg-between py-lg-5">
+      <div class="footer__logo row justify-content-center pt-4 pt-lg-0 pb-5 pb-lg-0">
+        <a class="logo" href="index.html">
+          <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532941359/genadi/homePage/icons/logo.png">
+        </a>
       </div>
-      <div class="footer__copyright row justify-content-center text-center py-4">
-        <p>Design by Genadi Georgiev
-          <br> Copyright 2018</p>
+      <!-- end of footer__logo -->
+      <div class="footer__text text-center row justify-content-center ml-lg-5">
+        <p class="mb-lg-0">If you like
+          <a href="projects.html">My work</a>, you can
+          <a href="contact.html">Contact me</a> and start working together.</p>
       </div>
-      <!-- end of footer__copyright -->
-    </footer>
+      <!-- end of footer__text -->
+      <div class="someIcons row justify-content-center align-items-center pt-4 pt-lg-0 pb-5 pb-lg-0">
+        <a href="https://www.behance.net/gdesignbg" class="m-2">
+          <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/behance.png">
+        </a>
+        <a href="https://www.instagram.com/gdesignbg/" class="m-2">
+          <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/instagram.png">
+        </a>
+      </div>
+      <!-- end of someIcons -->
+    </div>
+    <div class="footer__copyright row justify-content-center text-center py-4">
+      <p>Design by Genadi Georgiev
+        <br> Copyright 2018</p>
+    </div>
+    <!-- end of footer__copyright -->
+  </footer>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
