--- a/skills.html
+++ b/skills.html
@@ -135,10 +135,10 @@
           <img id="skillspage__gallery--modal-content" class="px-4">
         </div>
         <div class="gallery-img">
-          <img class="img-fluid" src="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_600/v1533804032/genadi/skillspage/work.jpg">
+          <img class="img-fluid" src="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_600/v1533804032/genadi/skillspage/work.jpg">
         </div>
         <div class="gallery-img">
-          <img class="img-fluid" src="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_600/v1533799764/genadi/skillspage/logoGenadi.jpg">
+          <img class="img-fluid" src="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_600/v1533799764/genadi/skillspage/logoGenadi.jpg">
         </div>
         <div class="gallery-img">
           <img class="img-fluid" src="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_600/v1534416642/genadi/skillspage/technical.jpg">
