Fixing target-blank to all links

--- a/about.html
+++ b/about.html
@@ -94,31 +94,31 @@
       <!-- end of aboutpage__section1 -->
       <div class="aboutpage__section2 my-5">
         <div class="aboutpage__section2--slick">
-          <a target="_blank" href="https://creative.softuni.bg/certificates/details/1795/99561eee" class="aboutpage__certificate">
+          <a href="https://creative.softuni.bg/certificates/details/1795/99561eee" target="_blank" class="aboutpage__certificate">
             <img src="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_576/v1533643629/genadi/aboutPage/certificates/uxDesign.png">
           </a>
           <!-- end of aboutpage__certificate -->
-          <a target="_blank" href="https://creative.softuni.bg/certificates/details/2013/c8351d13" class="aboutpage__certificate">
+          <a href="https://creative.softuni.bg/certificates/details/2013/c8351d13" target="_blank" class="aboutpage__certificate">
             <img src="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_576/v1533643628/genadi/aboutPage/certificates/videoProcessingPremierePro.png">
           </a>
           <!-- end of aboutpage__certificate -->
-          <a target="_blank" href="https://creative.softuni.bg/certificates/details/2148/551e3724" class="aboutpage__certificate">
+          <a href="https://creative.softuni.bg/certificates/details/2148/551e3724" target="_blank" class="aboutpage__certificate">
             <img src="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_576/v1533643629/genadi/aboutPage/certificates/motionDesignAfterEffects.png">
           </a>
           <!-- end of aboutpage__certificate -->
-          <a target="_blank" href="https://creative.softuni.bg/certificates/details/1518/72a9befc" class="aboutpage__certificate">
+          <a href="https://creative.softuni.bg/certificates/details/1518/72a9befc" target="_blank" class="aboutpage__certificate">
             <img src="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_576/v1533643628/genadi/aboutPage/certificates/graphicDesignInDesign.png">
           </a>
           <!-- end of aboutpage__certificate -->
-          <a target="_blank" href="https://creative.softuni.bg/certificates/details/973/b05ea605" class="aboutpage__certificate">
+          <a href="https://creative.softuni.bg/certificates/details/973/b05ea605" target="_blank" class="aboutpage__certificate">
             <img src="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_576/v1533643628/genadi/aboutPage/certificates/graphicDesignPhotoshop.png">
           </a>
           <!-- end of aboutpage__certificate -->
-          <a target="_blank" href="https://creative.softuni.bg/certificates/details/562/2d9abb64" class="aboutpage__certificate">
+          <a href="https://creative.softuni.bg/certificates/details/562/2d9abb64" target="_blank" class="aboutpage__certificate">
             <img src="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_576/v1533643628/genadi/aboutPage/certificates/designFundamentals.png">
           </a>
           <!-- end of aboutpage__certificate -->
-          <a target="_blank" href="https://creative.softuni.bg/certificates/details/1277/16b13971" class="aboutpage__certificate">
+          <a href="https://creative.softuni.bg/certificates/details/1277/16b13971" target="_blank" class="aboutpage__certificate">
             <img src="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_576/v1533643628/genadi/aboutPage/certificates/graphicDesignIllustrator.png">
           </a>
           <!-- end of aboutpage__certificate -->
