Projects page fixed layout

--- a/projects.html
+++ b/projects.html
@@ -58,7 +58,7 @@
   <main>
     <div id="projectspage">
       <h2>Selected work.</h2>
-      <div class="projects__container d-sm-flex flex-wrap my-5">
+      <div class="projects__container d-flex flex-wrap my-5">
         <a href="https://mashmoclothing.netlify.com/" target="_blank" class="projects__item projects__item1">
           <div class="projects__item--text mb-3 ml-3">
             <h4 class="mb-1">Mashmo Clothing eCommerce</h4>
